[package]
name = "code4fun"
version = "0.1.0"
authors = ["Stefan Kaestle <stefan.kaestle@oracle.com>"]
edition = "2018"

[dependencies]
regex = "1"
diesel = { version = "1.0.0", features = [ "mysql", "chrono" ] }
dotenv = "0.9.0"
chrono = { version = "0.4", features = [ "serde" ] }
actix-web = "1.0.2"
env_logger = "0.6"
serde = "1.0"
serde_derive = "1.0"
